Bug 194408 - Crash when importing traditional kde addressbook
Summary: Crash when importing traditional kde addressbook
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
: 194739 194967 196430 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-28 12:00 UTC by Dario Panico
Modified: 2009-06-14 11:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dario Panico 2009-05-28 12:00:00 UTC
Application that crashed: akonadi_nepomuk_contact_feeder
Version of the application: 0.1
KDE Version: 4.2.87 (KDE 4.2.87 (KDE 4.3 >= 20090519))
Qt Version: 4.5.0
Operating System: Linux 2.6.28-11-generic x86_64
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
I was simply adding the traditional kde addressbook in akonadi resources.
I added the path $KDEHOME/share/apps/kabc and then the crash happened.
I have already set a traditional kde addressbook source to vcard file that was pointing to $KDEHOME/share/apps/kabc/stdvcf

 -- Backtrace:
Application: Akonadi Agent (akonadi_nepomuk_contact_feeder), signal: Segmentation fault
[KCrash Handler]
#5  0x00007fea927ec19d in Soprano::FilterModel::containsAnyStatement () from /opt/kde4/lib/libsoprano.so.4
#6  0x00007fea92aacdc7 in Nepomuk::ResourceData::exists () from /opt/kde4/lib/libnepomuk.so.4
#7  0x00007fea92aae058 in Nepomuk::ResourceData::store () from /opt/kde4/lib/libnepomuk.so.4
#8  0x00007fea92aaeb7a in Nepomuk::ResourceData::setProperty () from /opt/kde4/lib/libnepomuk.so.4
#9  0x00007fea92ac5179 in Nepomuk::Resource::setLabel () from /opt/kde4/lib/libnepomuk.so.4
#10 0x000000000042b0e5 in Akonadi::NepomukContactFeeder::updateItem ()
#11 0x00007fea938c7aa5 in Akonadi::AgentBasePrivate::itemChanged () from /opt/kde4/lib/libakonadi-kde.so.4
#12 0x00007fea938c4c12 in Akonadi::AgentBasePrivate::qt_metacall () from /opt/kde4/lib/libakonadi-kde.so.4
#13 0x00007fea935921f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#14 0x00007fea9392d687 in Akonadi::Monitor::itemChanged () from /opt/kde4/lib/libakonadi-kde.so.4
#15 0x00007fea939315ef in Akonadi::MonitorPrivate::emitItemNotification () from /opt/kde4/lib/libakonadi-kde.so.4
#16 0x00007fea93931c80 in Akonadi::MonitorPrivate::slotItemJobFinished () from /opt/kde4/lib/libakonadi-kde.so.4
#17 0x00007fea9392d726 in Akonadi::Monitor::qt_metacall () from /opt/kde4/lib/libakonadi-kde.so.4
#18 0x00007fea938decbd in Akonadi::ChangeRecorder::qt_metacall () from /opt/kde4/lib/libakonadi-kde.so.4
#19 0x00007fea935921f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#20 0x00007fea923e8e32 in KJob::result () from /opt/kde4/lib/libkdecore.so.5
#21 0x00007fea923e91af in KJob::emitResult () from /opt/kde4/lib/libkdecore.so.5
#22 0x00007fea9392969b in Akonadi::JobPrivate::handleResponse () from /opt/kde4/lib/libakonadi-kde.so.4
#23 0x00007fea9394a9ec in Akonadi::SessionPrivate::dataReceived () from /opt/kde4/lib/libakonadi-kde.so.4
#24 0x00007fea9394b769 in Akonadi::Session::qt_metacall () from /opt/kde4/lib/libakonadi-kde.so.4
#25 0x00007fea935921f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#26 0x00007fea935c8085 in QIODevice::qt_metacall () from /usr/lib/libQtCore.so.4
#27 0x00007fea8fbee5a5 in QLocalSocket::qt_metacall () from /usr/lib/libQtNetwork.so.4
#28 0x00007fea935921f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#29 0x00007fea8fbe8e8f in ?? () from /usr/lib/libQtNetwork.so.4
#30 0x00007fea8fbd7b61 in ?? () from /usr/lib/libQtNetwork.so.4
#31 0x00007fea90de878d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#32 0x00007fea90df097a in QApplication::notify () from /usr/lib/libQtGui.so.4
#33 0x00007fea91ccd01b in KApplication::notify () from /opt/kde4/lib/libkdeui.so.5
#34 0x00007fea9357c75c in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#35 0x00007fea935a60e9 in ?? () from /usr/lib/libQtCore.so.4
#36 0x00007fea8e72620a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#37 0x00007fea8e7298e0 in ?? () from /usr/lib/libglib-2.0.so.0
#38 0x00007fea8e729a7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#39 0x00007fea935a5e6f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#40 0x00007fea90e80bef in ?? () from /usr/lib/libQtGui.so.4
#41 0x00007fea9357b002 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#42 0x00007fea9357b3cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#43 0x00007fea9357d694 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#44 0x00007fea938c5176 in Akonadi::AgentBase::init () from /opt/kde4/lib/libakonadi-kde.so.4
#45 0x000000000042a228 in main ()

Reported using DrKonqi
Comment 1 Sebastian Trueg 2009-05-28 14:06:41 UTC
could you please install debug packages for soprano and nepomuk and provide a new backtrace.
Comment 2 Dario Panico 2009-05-29 10:08:46 UTC
I'm building kde using kdesvn-build, i could do it if i knew how
Comment 3 Sebastian Trueg 2009-05-29 10:25:38 UTC
in ~/.kdesvn-buildrc replace
  cmake-options -DCMAKE_BUILD_TYPE=RelWithDebInfo
with
  cmake-options -DCMAKE_BUILD_TYPE=debugfull
hopefully that will do it.
Comment 4 Christophe Marin 2009-05-31 11:29:14 UTC
*** Bug 194739 has been marked as a duplicate of this bug. ***
Comment 5 Dario Panico 2009-05-31 19:17:52 UTC
i've prepared tthe debug environment but i cannot reproduce the bug anymore
Comment 6 Christophe Marin 2009-06-02 11:27:02 UTC
*** Bug 194967 has been marked as a duplicate of this bug. ***
Comment 7 Sebastian Trueg 2009-06-02 14:38:14 UTC
SVN commit 976633 by trueg:

Properly initialize Nepomuk

BUG: 194408


 M  +3 -0      nepomuk_contact_feeder/nepomukcontactfeeder.cpp  
 M  +3 -0      nepomuk_email_feeder/nepomukemailfeeder.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=976633
Comment 8 Christophe Marin 2009-06-14 11:06:37 UTC
*** Bug 196430 has been marked as a duplicate of this bug. ***