Properly initialize Nepomuk

BUG: 194408

svn path=/trunk/KDE/kdepim/akonadi/agents/; revision=976633